--- a/index.html
+++ b/index.html
@@ -1,99 +1,167 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Website | E-Phone</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Home | E-Phone</title>
 
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<header>
-		<h3>E-Phone</h3>
-		<nav>
-			<ul>
-				<li>Home</li>
-				<li>IPHONE</li>
-				<li>SAMSUNG</li>
-				<li>XIAOMI</li>
-				<li>NOKIA</li>
-				<li><a href="resources/login.html">Login</a></li>
-			</ul>
-		</nav>
-	</header>
-	<section>
-		<div class="container">
-			<div class="card">
-				<h1>SAMSUNG</h1>
-				<div class="desc">
-					<img src="img/img1.png">
-					<p>lorem ipsum dolor sit amet</p>
-				</div>
-				<h3>Harga : Rp.240000</h3>
-			</div>
-			<div class="card">
-				<h1>SAMSUNG</h1>
-				<div class="desc">
-					<img src="img/img1.png">
-					<p>lorem ipsum dolor sit amet</p>
-				</div>
-				<h3>Harga : Rp.240000</h3>
-			</div>
-			<div class="card">
-				<h1>SAMSUNG</h1>
-				<div class="desc">
-					<img src="img/img1.png">
-					<p>lorem ipsum dolor sit amet</p>
-				</div>
-				<h3>Harga : Rp.240000</h3>
-			</div>
-			<div class="card">
-				<h1>SAMSUNG</h1>
-				<div class="desc">
-					<img src="img/img1.png">
-					<p>lorem ipsum dolor sit amet</p>
-				</div>
-				<h3>Harga : Rp.240000</h3>
-			</div>
-			<div class="card">
-				<h1>SAMSUNG</h1>
-				<div class="desc">
-					<img src="img/img1.png">
-					<p>lorem ipsum dolor sit amet</p>
-				</div>
-				<h3>Harga : Rp.240000</h3>
-			</div>
-			<div class="card">
-				<h1>SAMSUNG</h1>
-				<div class="desc">
-					<img src="img/img1.png">
-					<p>lorem ipsum dolor sit amet</p>
-				</div>
-				<h3>Harga : Rp.240000</h3>
-			</div>
-			<div class="card">
-				<h1>SAMSUNG</h1>
-				<div class="desc">
-					<img src="img/img1.png">
-					<p>lorem ipsum dolor sit amet</p>
-				</div>
-				<h3>Harga : Rp.240000</h3>
-			</div>
-			<div class="card">
-				<h1>SAMSUNG</h1>
-				<div class="desc">
-					<img src="img/img1.png">
-					<p>lorem ipsum dolor sit amet</p>
-				</div>
-				<h3>Harga : Rp.240000</h3>
-			</div>
-		</div>
-	</section>
-	<footer>
-		<div class="icon"></div>
-		<div class="teks">
-			<p>©️ Copyright RAFLYMAULIDAN 2023</p>
-		</div>
-	</footer>
+    <header>
+        <h3><a href="index.html">E-Phone</a></h3>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li class="dropdown">
+                    <a href="javascript:void(0)" class="dropbtn">Handphone</a>
+                    <div class="dropdown-content">
+                        <a href="resources/iphone.html">IPHONE</a>
+                        <a href="resources/samsung.html">SAMSUNG</a>
+                    </div>
+                </li>
+                <li><a href="resources/login.html">Login</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section>
+        <h4>SAMSUNG</h4>
+        <div class="page1">
+            <div class="card">
+                <h1>Samsung Galaxy A14 5G</h1>
+                <hr>
+                <div class="desc">
+                    <img src="img/samsung/img1.png">
+                    <p>OS : Android 13<br>Ram : 6GB/128GB<br>Battery : 5000mAh</p>
+                </div>
+                <hr>
+                <h3>Harga : Rp.2.825.000</h3>
+                <br>
+                <button>Keranjang</button>
+                <button>Beli</button>
+            </div>
+            <div class="card">
+                <h1>Samsung Galaxy A73 5G</h1>
+                <hr>
+                <div class="desc">
+                    <img src="img/samsung/img2.png">
+                    <p>OS : Android 12<br>Ram : 8GB/256GB<br>Battery : 5000mAh</p>
+                </div>
+                <hr>
+                <h3>Harga : Rp.5.679.999</h3>
+                <br>
+                <button>Keranjang</button>
+                <button>Beli</button>
+            </div>
+            <div class="card">
+                <h1>Samsung Galaxy A23 5G</h1>
+                <hr>
+                <div class="desc">
+                    <img src="img/samsung/img3.png">
+                    <p>OS : Android 12<br>Ram : 8GB/256GB<br>Battery : 5000mAh</p>
+                </div>
+                <hr>
+                <h3>Harga : Rp.3.540.000</h3>
+                <br>
+                <button>Keranjang</button>
+                <button>Beli</button>
+            </div>
+            <div class="card">
+                <h1>Samsung Galaxy A04s</h1>
+                <hr>
+                <div class="desc">
+                    <img src="img/samsung/img4.png">
+                    <p>OS : Android 12<br>Ram : 4GB/64GB<br>Battery : 5000mAh</p>
+                </div>
+                <hr>
+                <h3>Harga : Rp.1.825.000</h3>
+                <br>
+                <button>Keranjang</button>
+                <button>Beli</button>
+            </div>
+        </div>
+
+        <div class="content">
+            
+        </div>
+
+        <h4>IPHONE</h4>
+        <div class="page2">
+            <div class="card">
+                <h1>Apple iPhone 14 Pro Max</h1>
+                <hr>
+                <div class="desc">
+                    <img src="img/iphone/img1.png">
+                    <p>Chipset : Apple A16<br>Ram : 6GB/1TB<br>Battery : 4323 mAh</p>
+                </div>
+                <hr>
+                <h3>Harga : Rp.20.999.000</h3>
+                <br>
+                <button>Keranjang</button>
+                <button>Beli</button>
+            </div>
+            <div class="card">
+                <h1>Apple iPhone 14 Pro</h1>
+                <hr>
+                <div class="desc">
+                    <img src="img/iphone/img2.png">
+                    <p>Chipset : Apple A16<br>Ram : 6GB/1TB<br>Battery : 3200 mAh</p>
+                </div>
+                <hr>
+                <h3>Harga : Rp.18.999.000</h3>
+                <br>
+                <button>Keranjang</button>
+                <button>Beli</button>
+            </div>
+            <div class="card">
+                <h1>Apple iPhone 14 Plus</h1>
+                <hr>
+                <div class="desc">
+                    <img src="img/iphone/img3.png">
+                    <p>Chipset : Apple A15<br>Ram : 6GB/512GB<br>Battery : 4323 mAh</p>
+                </div>
+                <hr>
+                <h3>Harga : Rp.16.999.000</h3>
+                <br>
+                <button>Keranjang</button>
+                <button>Beli</button>
+            </div>
+            <div class="card">
+                <h1>Apple iPhone 14</h1>
+                <hr>
+                <div class="desc">
+                    <img src="img/iphone/img4.png">
+                    <p>Chipset : Apple A15<br>Ram : 6GB/512GB<br>Battery : 3729 mAh</p>
+                </div>
+                <hr>
+                <h3>Harga : Rp.14.999.000</h3>
+                <br>
+                <button>Keranjang</button>
+                <button>Beli</button>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="teks">
+            <p>©️ 2023 Rafly Maulidan, E-Phone</p>
+        </div>
+
+        <div class="icon">
+            <center>
+                <img src="img/email.png">
+                <img src="img/whatsapp.png">
+                <img src="img/ig.png">
+            </center>
+        </div>
+
+        <div class="perlinkan">
+            <center>
+                <a href="index.html">Home</a>
+                <a href="resources/samsung.html">Samsung</a>
+                <a href="resources.iphone.html">iPhone</a>
+                <a href="https://github.com/seeyouridan" class="link-website">Github</a>
+            </center>
+        </div>
+    </footer>
 </body>
 </html>
