Project praktikum pwd

--- a/index.html
+++ b/index.html
@@ -24,123 +24,16 @@
             </ul>
         </nav>
     </header>
+
     <section>
-        <h4>SAMSUNG</h4>
-        <div class="page1">
-            <div class="card">
-                <h1>Samsung Galaxy A14 5G</h1>
-                <hr>
-                <div class="desc">
-                    <img src="img/samsung/img1.png">
-                    <p>OS : Android 13<br>Ram : 6GB/128GB<br>Battery : 5000mAh</p>
-                </div>
-                <hr>
-                <h3>Harga : Rp.2.825.000</h3>
-                <br>
-                <button>Keranjang</button>
-                <button>Beli</button>
-            </div>
-            <div class="card">
-                <h1>Samsung Galaxy A73 5G</h1>
-                <hr>
-                <div class="desc">
-                    <img src="img/samsung/img2.png">
-                    <p>OS : Android 12<br>Ram : 8GB/256GB<br>Battery : 5000mAh</p>
-                </div>
-                <hr>
-                <h3>Harga : Rp.5.679.999</h3>
-                <br>
-                <button>Keranjang</button>
-                <button>Beli</button>
-            </div>
-            <div class="card">
-                <h1>Samsung Galaxy A23 5G</h1>
-                <hr>
-                <div class="desc">
-                    <img src="img/samsung/img3.png">
-                    <p>OS : Android 12<br>Ram : 8GB/256GB<br>Battery : 5000mAh</p>
-                </div>
-                <hr>
-                <h3>Harga : Rp.3.540.000</h3>
-                <br>
-                <button>Keranjang</button>
-                <button>Beli</button>
-            </div>
-            <div class="card">
-                <h1>Samsung Galaxy A04s</h1>
-                <hr>
-                <div class="desc">
-                    <img src="img/samsung/img4.png">
-                    <p>OS : Android 12<br>Ram : 4GB/64GB<br>Battery : 5000mAh</p>
-                </div>
-                <hr>
-                <h3>Harga : Rp.1.825.000</h3>
-                <br>
-                <button>Keranjang</button>
-                <button>Beli</button>
-            </div>
-        </div>
-
-        <div class="content">
-            
-        </div>
-
-        <h4>IPHONE</h4>
-        <div class="page2">
-            <div class="card">
-                <h1>Apple iPhone 14 Pro Max</h1>
-                <hr>
-                <div class="desc">
-                    <img src="img/iphone/img1.png">
-                    <p>Chipset : Apple A16<br>Ram : 6GB/1TB<br>Battery : 4323 mAh</p>
-                </div>
-                <hr>
-                <h3>Harga : Rp.20.999.000</h3>
-                <br>
-                <button>Keranjang</button>
-                <button>Beli</button>
-            </div>
-            <div class="card">
-                <h1>Apple iPhone 14 Pro</h1>
-                <hr>
-                <div class="desc">
-                    <img src="img/iphone/img2.png">
-                    <p>Chipset : Apple A16<br>Ram : 6GB/1TB<br>Battery : 3200 mAh</p>
-                </div>
-                <hr>
-                <h3>Harga : Rp.18.999.000</h3>
-                <br>
-                <button>Keranjang</button>
-                <button>Beli</button>
-            </div>
-            <div class="card">
-                <h1>Apple iPhone 14 Plus</h1>
-                <hr>
-                <div class="desc">
-                    <img src="img/iphone/img3.png">
-                    <p>Chipset : Apple A15<br>Ram : 6GB/512GB<br>Battery : 4323 mAh</p>
-                </div>
-                <hr>
-                <h3>Harga : Rp.16.999.000</h3>
-                <br>
-                <button>Keranjang</button>
-                <button>Beli</button>
-            </div>
-            <div class="card">
-                <h1>Apple iPhone 14</h1>
-                <hr>
-                <div class="desc">
-                    <img src="img/iphone/img4.png">
-                    <p>Chipset : Apple A15<br>Ram : 6GB/512GB<br>Battery : 3729 mAh</p>
-                </div>
-                <hr>
-                <h3>Harga : Rp.14.999.000</h3>
-                <br>
-                <button>Keranjang</button>
-                <button>Beli</button>
-            </div>
-        </div>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </section>
+
     <footer>
         <div class="teks">
             <p>©️ 2023 Rafly Maulidan, E-Phone</p>
@@ -163,5 +56,7 @@
             </center>
         </div>
     </footer>
+
+    <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
